# Uzduotis-nr-2

./: CMakeLists.txt  README.md  test.cpp
Include/: bibliotekos.h
html/: _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _debug_2__deps_2googletest-src_2_c_o_n_t_r_i_b_u_t_i_n_g_8md.html  _debug_2__deps_2googletest-src_2_r_e_a_d_m_e_8md.html  _debug_2__deps_2googletest-src_2docs_2advanced_8md.html  _debug_2__deps_2googletest-src_2docs_2community__created__documentation_8md.html  _debug_2__deps_2googletest-src_2docs_2faq_8md.html  _debug_2__deps_2googletest-src_2docs_2gmock__cheat__sheet_8md.html  _debug_2__deps_2googletest-src_2docs_2gmock__cook__book_8md.html  _debug_2__deps_2googletest-src_2docs_2gmock__faq_8md.html  _debug_2__deps_2googletest-src_2docs_2gmock__for__dummies_8md.html  _debug_2__deps_2googletest-src_2docs_2index_8md.html  _debug_2__deps_2googletest-src_2docs_2pkgconfig_8md.html  _debug_2__deps_2googletest-src_2docs_2platforms_8md.html  _debug_2__deps_2googletest-src_2docs_2primer_8md.html  _debug_2__deps_2googletest-src_2docs_2quickstart-bazel_8md.html  _debug_2__deps_2googletest-src_2docs_2quickstart-cmake_8md.html  _debug_2__deps_2googletest-src_2docs_2reference_2actions_8md.html  _debug_2__deps_2googletest-src_2docs_2reference_2assertions_8md.html  _debug_2__deps_2googletest-src_2docs_2reference_2matchers_8md.html  _debug_2__deps_2googletest-src_2docs_2reference_2mocking_8md.html  _debug_2__deps_2googletest-src_2docs_2reference_2testing_8md.html  _debug_2__deps_2googletest-src_2docs_2samples_8md.html  (+3028 more)
(+191 files in other folders)
